; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_search.c_dcast_base_hint.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_search.c_dcast_base_hint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dcast_data_s = type { i64, i32, i64, i64 }

@NULL_TREE = common dso_local global i64 0, align 8
@dfs_dcast_hint_pre = common dso_local global i32 0, align 4
@dfs_dcast_hint_post = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @dcast_base_hint(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.dcast_data_s, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = getelementptr inbounds %struct.dcast_data_s, %struct.dcast_data_s* %5, i32 0, i32 3
  store i64 %6, i64* %7, align 8
  %8 = getelementptr inbounds %struct.dcast_data_s, %struct.dcast_data_s* %5, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load i64, i64* @NULL_TREE, align 8
  %10 = getelementptr inbounds %struct.dcast_data_s, %struct.dcast_data_s* %5, i32 0, i32 0
  store i64 %9, i64* %10, align 8
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @CLASSTYPE_REPEATED_BASE_P(i64 %11)
  %13 = getelementptr inbounds %struct.dcast_data_s, %struct.dcast_data_s* %5, i32 0, i32 1
  store i32 %12, i32* %13, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @TYPE_BINFO(i64 %14)
  %16 = load i32, i32* @dfs_dcast_hint_pre, align 4
  %17 = load i32, i32* @dfs_dcast_hint_post, align 4
  %18 = call i32 @dfs_walk_once_accessible(i32 %15, i32 0, i32 %16, i32 %17, %struct.dcast_data_s* %5)
  %19 = getelementptr inbounds %struct.dcast_data_s, %struct.dcast_data_s* %5, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %2
  %23 = getelementptr inbounds %struct.dcast_data_s, %struct.dcast_data_s* %5, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  br label %27

25:                                               ; preds = %2
  %26 = call i64 @ssize_int(i32 -2)
  br label %27

27:                                               ; preds = %25, %22
  %28 = phi i64 [ %24, %22 ], [ %26, %25 ]
  ret i64 %28
}

declare dso_local i32 @CLASSTYPE_REPEATED_BASE_P(i64) #1

declare dso_local i32 @dfs_walk_once_accessible(i32, i32, i32, i32, %struct.dcast_data_s*) #1

declare dso_local i32 @TYPE_BINFO(i64) #1

declare dso_local i64 @ssize_int(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
